--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       default-src 'self';
       script-src 'self'; 
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
-      img-src 'self' data: https://*.supabase.co; 
+      img-src 'self' data: https://*.supabase.co https://copyshare-inky.vercel.app; 
       connect-src 'self' https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com;
       font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
       object-src 'none'; 
