commit final favere

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self';
-      script-src 'self'; 
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
+      script-src 'self' 'unsafe-eval'; 
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
       img-src 'self' data: https://*.supabase.co https://copyshare-inky.vercel.app; 
       connect-src 'self' https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com;
       font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
