--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg"> <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
     
+    <base href="/"> 
+
     <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      script-src 'self' 'unsafe-eval'; 
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
-      img-src 'self' data: https://*.supabase.co https://copyshare-inky.vercel.app; 
-      connect-src 'self' https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com;
-      font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
+      default-src 'self' 'unsafe-inline' 'unsafe-eval' https: http: data: blob:;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http: blob:; 
+      style-src 'self' 'unsafe-inline' https: http: blob:; 
+      img-src 'self' data: https: http: blob:; 
+      connect-src 'self' https: http: ws: blob:;
+      font-src 'self' https: http: data: blob:;
       object-src 'none'; 
       base-uri 'self';
       form-action 'self';
