--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <base href="/"> 
 
     <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self' 'unsafe-inline' 'unsafe-eval' https: http: data: blob:;
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https: http: blob:; 
-      style-src 'self' 'unsafe-inline' https: http: blob:; 
-      img-src 'self' data: https: http: blob:; 
-      connect-src 'self' https: http: ws: blob:;
-      font-src 'self' https: http: data: blob:;
+      default-src 'self';
+      script-src 'self'; 
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
+      img-src 'self' data: https://*.supabase.co https://copyshare-inky.vercel.app; 
+      connect-src 'self' https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com;
+      font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
       object-src 'none'; 
       base-uri 'self';
       form-action 'self';
