--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CopyShare</title>
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -16,26 +16,13 @@
     <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="any">
-    <link rel="icon" type="image/svg+xml" href="/logo.svg"> <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+    <link rel="icon" type="image/svg+xml" href="/logo.svg"> 
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
-    
+
     <base href="/"> 
 
-    <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self';
-      script-src 'self'; 
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; 
-      img-src 'self' data: https://*.supabase.co https://copyshare-inky.vercel.app; 
-      connect-src 'self' https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com;
-      font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com;
-      object-src 'none'; 
-      base-uri 'self';
-      form-action 'self';
-      frame-ancestors 'none';
-      block-all-mixed-content;
-      upgrade-insecure-requests;
-    ">
-  </head>
+    </head>
   <body class="bg-gray-50 dark:bg-neutral-900 transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
